# Arshu.Assembler

./: .gitignore  LICENSE  README.md  compare_outputs.ps1  perf_tests.bat  perf_tests.cs  perf_tests.md
.github/: copilot-instructions.md
csharp/: Assembler.sln  fly.toml  fly_run_csharp_web.bat  fly_run_js_web.bat
csharp/Assembler/: Assembler.csproj
csharp/AssemblerTest/: AssemblerTest.csproj  PreprocessExtensions.cs  Program.cs
csharp/AssemblerWeb/: AssemblerEndpoint.cs  Dockerfile  (+3 more)
docs/: DevelopmentNotes.md  rules.md
go/: fly.toml
node/: fly.toml
php/: fly.toml
rust/: fly.toml
rust/AssemblerWeb/: Cargo.toml  Dockerfile
rust/AssemblerWeb/src/: main.rs
rust/AssemblerWeb/wwwroot/: rust_advancedtest_Summary.html  rust_advancedtest_Summary.json  rust_perfsummary.html  rust_perfsummary.json  rust_standardtest_Summary.html  rust_standardtest_Summary.json
rust/AssemblerWeb/wwwroot/AppSites/HtmlRule2F/: Html2F.html
rust/AssemblerWeb/wwwroot/AppSites/HtmlRule2F/Component/: html2FContent.html
rust/AssemblerWeb/wwwroot/AppSites/HtmlRule3A/: html3A.html
rust/AssemblerWeb/wwwroot/AppSites/HtmlRule3B/: html3B.html
rust/AssemblerWeb/wwwroot/AppSites/HtmlRule3B/Views/: html3Bcontent.html
rust/AssemblerWeb/wwwroot/AppSites/JsonRule1B/Component/: json1Bcontent.html
rust/AssemblerWeb/wwwroot/AppSites/Test0/Component/: deployinfo.json  maininfo.json
rust/AssemblerWeb/wwwroot/AppSites/Test1/Component/: test1contentcontent.html
rust/AssemblerWeb/wwwroot/AppSites/Test2/: test2.html
rust/AssemblerWeb/wwwroot/AppSites/Test3/Common/: columns.html
(+403 files in other folders)
